Use the term `entry` to describe what's part of schedules
resolves #75

--- a/public/css/form.less
+++ b/public/css/form.less
@@ -17,7 +17,7 @@
   }
 }
 
-.event-form {
+.entry-form {
   fieldset[name="recipient"] > .control-group {
     margin-bottom: 0;
   }
@@ -61,7 +61,7 @@
 
 /* Style */
 
-.event-form {
+.entry-form {
   label.contact,
   label.group {
     &::before {
