--- a/public/css/schedule.less
+++ b/public/css/schedule.less
@@ -45,7 +45,7 @@
     }
   }
 
-  .event-form:not(:empty) {
+  .entry-form:not(:empty) {
     flex: 1 1 auto;
     min-width: 30%;
     padding-left: 1em;
