Align source-icons in their bubbles

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -33,6 +33,9 @@
 
   color: @text-color;
   margin-right: 0.2em;
+  i.icon {
+    vertical-align: text-top;
+  }
 
   i.icon:before {
     margin: unset;
