--- a/public/css/detail/event-rule-detail.less
+++ b/public/css/detail/event-rule-detail.less
@@ -202,7 +202,7 @@
 }
 
 .cache-notice {
-  margin: 1em;
+  margin: 1em 0;
   padding: 1em;
   background-color: @gray-lighter;
   text-align: center;
