CSS: Align EventListItem in controls vertically

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -25,6 +25,13 @@
     display: block;
     .box-shadow(0, 0, 0, 1px, @gray-lighter);
   }
+
+  .item-list .list-item {
+    .main, .visual {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  }
 }
 
 .source-icon {
