--- a/public/css/common.less
+++ b/public/css/common.less
@@ -18,7 +18,7 @@
     .box-shadow(0, 0, 0, 1px, @gray-lighter);
     flex-shrink: 0;
     z-index: 1; // The content may clip, this ensures the separator is always visible
-    height: 8em; //TODO(sd): add dynamic fix for noma
+    height: 8em; //TODO(sd): add dynamic fix
   }
 
   &.event-rule-detail {
