--- a/public/css/event-source-badge.less
+++ b/public/css/event-source-badge.less
@@ -6,16 +6,15 @@
   }
 
   .name {
-    position: relative;
     display: inline-block;
     height: 2em;
+    line-height: 2 - 2 * @ball-pad;
     border-bottom-right-radius: 1em;
     border-top-right-radius: 1em;
-    z-index: -99;
     padding: @ball-pad .5em @ball-pad 1.5em;
     margin-left: 1em;
 
-    background-color: @gray;
-    color: @text-color-inverted;
+    background-color: @gray-lighter;
+    color: @text-color;
   }
 }
