css: Increase icon size and alignment

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -33,8 +33,9 @@
 
   color: @text-color;
   margin-right: 0.2em;
+
   i.icon {
-    vertical-align: text-top;
+    font-size: 1.25em;
   }
 
   i.icon:before {
