--- a/public/css/list/item-list.less
+++ b/public/css/list/item-list.less
@@ -1,70 +1,14 @@
-// Style
-
-.item-list {
-  list-style-type: none;
-
-  > .empty-state {
-    .rounded-corners();
-    background-color: @gray-lighter;
-  }
-}
-
 // Layout
 
 .item-list {
-  margin: 0;
-  padding: 0;
+  .visual {
+    .icon { // TODO: should this be default in ipl-web?
+      font-size: 1.5em;
 
-  .list-item {
-    display: flex;
-
-    .main {
-      flex: 1 1 auto;
-      padding: .5em 0;
-      width: 0;
-      margin-left: .5em;
-    }
-
-    .visual {
-      display: flex;
-      justify-content: center;
-
-      .icon {
-        font-size: 1.5em;
-
-        &:before {
-          margin-right: 0;
-        }
+      &:before {
+        margin-right: 0;
       }
     }
-
-    header {
-      display: flex;
-      align-items: flex-start;
-      justify-content: space-between;
-    }
-
-    .caption {
-      height: 3em;
-      text-overflow: ellipsis;
-      overflow: hidden;
-
-      .line-clamp();
-
-      img {
-        max-height: 1em;
-      }
-    }
-
-    footer {
-      display: flex;
-      justify-content: space-between;
-    }
-  }
-
-  > .empty-state {
-    padding: 1em;
-    text-align: center;
   }
 }
 
@@ -75,6 +19,7 @@
 
   .list-item {
     align-items: center;
+
     header {
       max-width: 100%;
     }
@@ -91,31 +36,6 @@
 
       .text-ellipsis();
       .line-clamp("reset");
-    }
-  }
-}
-
-.item-list .list-item {
-  .title {
-    display: inline-flex;
-    align-items: baseline;
-    white-space: nowrap;
-    min-width: 0;
-
-    > * {
-      margin: 0 .28125em; // 0 calculated &nbsp; width
-
-      &:first-child {
-        margin-left: 0;
-      }
-
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-
-    .subject {
-      .text-ellipsis();
     }
   }
 }
