`incident-detail.less`: Remove unused incident-object-label-list

--- a/public/css/detail/incident-detail.less
+++ b/public/css/detail/incident-detail.less
@@ -11,8 +11,7 @@
     }
   }
 
-  .incident-contact-list,
-  .incident-object-label-list {
+  .incident-contact-list {
     .list-item {
       &:not(:first-child) > .main {
         border-top: 0;
