Remove event rule session storage

--- a/public/css/detail/event-rule-detail.less
+++ b/public/css/detail/event-rule-detail.less
@@ -3,14 +3,6 @@
   align-items: baseline;
 }
 
-.cache-notice {
-  margin: 1em;
-  padding: 1em;
-  background-color: @gray-lighter;
-  text-align: center;
-  .rounded-corners();
-}
-
 .new-event-rule {
   margin-bottom: 1em;
 }
@@ -37,6 +29,14 @@
       max-width: unset;
       width: 25em;
     }
+  }
+
+  .control-button.disabled {
+    pointer-events: none;
+  }
+
+  .not-allowed {
+    cursor: not-allowed;
   }
 }
 
